fixed the qualification title spacing

--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ input {
 .home__social-link {
     font-size: 1.08rem;
     color: var(--text-color);
-    transition: .4s;
+    transition: .3s;
 }
 
 .home__social-link:hover {
@@ -418,14 +418,18 @@ input {
     font-size: var(--small-font-size);
 }
 
+.about__subtitle {
+    font-size: var(--smaller-font-size);
+}
+
 /*===== Qualification Section =====*/
 .qualification__container {
-    grid-template-columns: repeat(2,340px);
+    grid-template-columns: repeat(2, 340px);
     column-gap: 3rem;
     justify-content: center;
 }
 
-.qualification__tile {
+.qualification__title {
     font-size: var(--h3-font-size);
     font-weight: var(--font-medium);
     margin-bottom: var(--mb-2);
